# OpenShadingLanguage

./: .clang-format  .git-blame-ignore-revs  .gitignore  .mailmap  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGES  CHANGES.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  INSTALL  INSTALL.md  LICENSE  LICENSE-THIRD-PARTY.md  LICENSE.md  Makefile  README  README.md  README.rst  SECURITY.md  THIRD-PARTY.md  activate_conda_osl_env.sh  appveyor.yml  appveyor.yml.disable  build.csh  build_clang5.csh  build_icc17u4.csh  build_osl.sh  index.html  init_env.sh  need-to-sign-cla.txt  params.json  sonar-project.properties  tasks_to_widen.txt
src/: CMakeLists.txt
src/build-scripts/: OpenEXR-CMakeLists.txt  OpenEXR-IlmImf-CMakeLists.txt  analyze-ptx.py  build_abi_tools.bash  build_cmake.bash  build_libpng.bash  build_llvm.bash  build_materialX_osl.py  build_opencolorio.bash  build_openexr.bash  build_openimageio.bash  build_osl.sh  build_pugixml.bash  build_pybind11.bash  build_zlib.bash  ci-abicheck.bash  ci-build-and-test.bash  ci-build.bash  ci-coverage.bash  ci-startup.bash  ci-test.bash  configure_conda_env.bash  docdeep.py  gh-installdeps-centos.bash  gh-installdeps.bash  gh-win-installdeps.bash  hidesymbols.map  install_homebrew_deps.bash  ninjatracing.py  nosanitize.txt  oneapi_2022.1.0.cfg  oslcomp.pc.in  oslexec.pc.in  oslquery.pc.in  process-ptx.py  run-clang-format.bash  save-env.bash  serialize-bc.py
src/cmake/: CMakeUserUseBison.cmake  CMakeUserUseFlex.cmake  Config.cmake.in  check_is_enabled.cmake  checked_find_package.cmake  colors.cmake  compiler.cmake  cuda_macros.cmake  dependency_utils.cmake  externalpackages.cmake  fancy_add_executable.cmake  flexbison.cmake  install.cmake  llvm_macros.cmake  oiio.cmake  packaging.cmake  platform.cmake  pythonutils.cmake  set_utils.cmake  testing.cmake  util_macros.cmake
src/doc/: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Welcome.txt  bigpicture.md  cliff.toml  conf.py  copyr.md  datatypes.md  docs.css  glossary.md  grammar.md  grosssyntax.md  index.rst  intro.md  languagespec.tex  lexical.md  macros.tex  markdeep.min.js  oslquery.md  osltoy.md  osltoy.md.html  requirements.txt  shadergroups.md  stdlib.md  syntax.md  techref.sty  testshade.md  testshade.md.html
src/er/: CMakeLists.txt
src/include/: CMakeLists.txt  Imathx.h  accum.h  dual.h  dual_vec.h  export.h  genclosure.h  llvm_util.h  matrix22.h  optautomata.h  optix_compat.h  osl_pvt.h  oslclosure.h  oslcomp.h  oslconfig.h  oslexec.h  oslquery.h  oslversion.h.in  shaderglobals.h  smallvec.h
src/libbsdl/: CMakeLists.txt  README.md  bsdl.cmake
src/liber/: CMakeLists.txt
src/liber_shader/: CMakeLists.txt
src/liboslcomp/: CMakeLists.txt  ast.cpp  ast.h  codegen.cpp  module.mk  oslcomp.cpp  oslcomp_pvt.h  oslcomp_shaders_dir.h.in  oslgram.y  osllex.l  symtab.cpp  symtab.h  typecheck.cpp
src/liboslexec/: CMakeLists.txt  accum.cpp  accum_test.cpp  aligned_allocator.h  automata.cpp  automata.h  backendcpp.cpp  backendcpp.h  backendllvm.cpp  backendllvm.h  backendllvm_wide.cpp  backendllvm_wide.h  background.cpp  batched_analysis.cpp  batched_analysis.h  batched_backendllvm.cpp  batched_backendllvm.h  batched_llvm_gen.cpp  batched_llvm_instance.cpp  batched_rendservices.cpp  bsdf.cpp  bsdf_ashikhmin_velvet.cpp  bsdf_cloth.cpp  bsdf_cloth_fncs.cpp  bsdf_cloth_fncs.h  bsdf_cloth_specular.cpp  bsdf_diffuse.cpp  bsdf_fakefur.cpp  bsdf_hair.cpp  bsdf_microfacet.cpp  bsdf_phong.cpp  bsdf_reflection.cpp  bsdf_refraction.cpp  bsdf_transparent.cpp  bsdf_velvet.cpp  bsdf_ward.cpp  bsdf_westin.cpp  bsdf_westin_velvet.cpp  bssrdf.cpp  builtin_closures.cpp  (+112 more)
src/liboslnoise/: CMakeLists.txt  fast_gabor.h  fast_gabor3_ansiotropic_disabled_16.cpp  fast_gabor3_ansiotropic_enabled_16.cpp  fast_gabor3_hybrid_disabled_16.cpp  fast_gabor3_hybrid_enabled_16.cpp  fast_gabor3_isotropic_disabled_16.cpp  fast_gabor3_isotropic_enabled_16.cpp  fast_gabor_ansiotropic_disabled_16.cpp  fast_gabor_ansiotropic_enabled_16.cpp  fast_gabor_hybrid_disabled_16.cpp  fast_gabor_hybrid_enabled_16.cpp  fast_gabor_isotropic_disabled_16.cpp  fast_gabor_isotropic_enabled_16.cpp  fast_simplex.h  fast_simplexnoise3_16_float.cpp  fast_simplexnoise3_16_vec3.cpp  fast_simplexnoise4_16_vec3.cpp  fast_usimplexnoise1_16_vec3.cpp  fast_usimplexnoise3_16_float.cpp  fast_usimplexnoise3_16_vec3.cpp  fast_usimplexnoise4_16_vec3.cpp  gabornoise.cpp  gabornoise.h  oslnoise_test.cpp  sfm_gabornoise.h  simplexnoise.cpp  wide_gabornoise.h
src/liboslquery/: CMakeLists.txt  __init__.py  module.mk  oslquery.cpp  py_osl.cpp  py_osl.h  querystub.cpp
src/make/: bin.mk  detectplatform.mk  lib.mk  linux.mk  linux64.mk  macosx.mk  master.mk  module.mk.template  platform.mk  project.mk  shlib.mk  srcpackage.mk
src/osl.imageio/: CMakeLists.txt  oslinput.cpp
src/oslc/: CMakeLists.txt  module.mk  oslcmain.cpp
src/oslinfo/: CMakeLists.txt  module.mk  oslinfo.cpp
src/osltoy/: CMakeLists.txt  codeeditor.cpp  codeeditor.h  osltoyapp.cpp  osltoyapp.h  osltoymain.cpp  osltoyrenderer.cpp  osltoyrenderer.h  qtutils.h  render_state.h  rs_strdecls.h
src/shaders/: CMakeLists.txt  color2.h  color4.h  cornell_wall.osl  emitter.osl  glass.osl  image.osl  mandelbrot.osl  matrix33.h  matte.osl  matte.oso  metal.osl  mirror.osl  oslutil.h  paintedplastic.osl  patterns.h  plastic.osl  stdosl.h  test.osl  ubersurface.osl  unnamed_group_1.ll  unnamed_group_1_O1.ll  vector2.h  vector4.h
src/testminimal/: CMakeLists.txt  oslmaterial.cpp  oslmaterial.h  testminimal.cpp
src/testoptix/: CMakeLists.txt  optixrend.cpp  optixrend.h  raytracer.h  serialize-bc.bash  shading.cpp  shading.h  stringtable.cpp  stringtable.h  testoptix.cpp
src/testrender/: CMakeLists.txt  background.h  bsdl_config.h  bvh.cpp  bvh.h  gpu_raytracer.h  hip_raytracer.cpp  hip_raytracer.h  optics.h  optix_stringtable.cpp  optix_stringtable.h  optixraytracer.cpp  optixraytracer.h  optixrend.cpp  optixrend.h  raytracer.h  render_params.h  render_state.h  rs_strdecls.h  sampling.h  scene.cpp  shading.cpp  shading.h  shading_cuda.cpp  simpleraytracer.cpp  (+5 more)
(+4784 files in other folders)
